--- a/Robocol/testapp/src/app/rover/brazo/analisis-operacion/analisis-operacion.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/analisis-operacion/analisis-operacion.component.html
@@ -1,18 +1,18 @@
-<table class="table table-borderless">
+<table class="table table-borderless" style="width: 100%; height: 100%;">
    <tbody>
       <tr>
-         <th scope="row">Plan: </th>
-         <td class="text-center col-6" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px;">
+         <th scope="row" style="color: #6c757d;">Plan: </th>
+         <td class="text-center col-6">
             <div class="progress">
-               <div class="progress-bar" id="bar-plan" role="progressbar" style="width: {{plan_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{plan_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}">70%</div>
+               <div class="progress-bar" id="bar-plan" role="progressbar" style="width: {{plan_value}}%;" attr.aria-valuenow="{{plan_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}">70%</div>
             </div>
          </td>
       </tr>
       <tr>
-         <th scope="row">Actual: </th>
-         <td class="text-center col-6" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px;">
+         <th scope="row" style="color: #6c757d;">Actual: </th>
+         <td class="text-center col-6">
             <div class="progress">
-               <div class="progress-bar" id="bar-actual" role="progressbar" style="width: {{actual_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{actual_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}">35%</div>
+               <div class="progress-bar" id="bar-actual" role="progressbar" style="width: {{actual_value}}%;" attr.aria-valuenow="{{actual_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}">35%</div>
             </div>
          </td>
       </tr>
