--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -2,22 +2,25 @@
    <div class="d-flex flex-column bd-highlight">
       <div class="d-flex flex-row justify-content-around">
          <div class="col col-lg-6">
-            <div class="d-flex card border-warning bg-transparent justify-content-center align-items-center text-center">
+            <div class="d-flex card rounded-0 border-warning bg-transparent justify-content-center align-items-center text-center">
                <div class="d-flex align-items-center card-body bg-black justify-content-center align-items-center text-center">
                   <img class="img-responsive" src="https://techcrunch.com/wp-content/uploads/2018/03/mrd-sf.gif">
                </div>
             </div>
          </div>
          <div class="col col-lg-6">
-            <div class="d-flex card border-warning bg-transparent justify-content-center align-items-center text-center">
+            <div class="d-flex card rounded-0 border-warning bg-transparent justify-content-center align-items-center text-center">
                <div class="d-flex align-items-center card-body bg-black justify-content-center align-items-center text-center">
                   <img class="img-responsive" src="https://techcrunch.com/wp-content/uploads/2018/03/mrd-sf.gif">
                </div>
             </div>
          </div>
       </div>
-      <div class="d-flex card border-warning bg-transparent justify-content-center align-items-center text-center tarjetaControl">
-         <div class="d-flex align-items-center card-body bg-black justify-content-around cuerpoTarjetaControl">
+      <div class="d-flex card rounded-0 border-warning bg-transparent justify-content-center align-items-center text-center tarjetaControl" style="display: flex;">
+         <div class="d-flex align-items-center card-body bg-black justify-content-around cuerpoTarjetaControl" style="display: flex;">
+            <div class="d-flex justify-content-center align-items-center text-center rotacion">
+               <app-brazo-cinematica-directa></app-brazo-cinematica-directa>
+            </div>
             <div class="d-flex justify-content-center align-items-center text-center rotacion">
                <app-brazo-cinematica-inversa-rotacion></app-brazo-cinematica-inversa-rotacion>
             </div>
@@ -27,6 +30,7 @@
             <div class="d-flex justify-content-center align-items-center text-center horizontal">
                <app-brazo-cinematica-inversa-horizontal></app-brazo-cinematica-inversa-horizontal>
             </div>
+            
          </div>
       </div>
    </div>
