--- a/Robocol/testapp/src/app/rover/brazo/sensor-presion/sensor-presion.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/sensor-presion/sensor-presion.component.html
@@ -1,1 +1,2 @@
-<p>sensor-presion works!</p>
+<div *ngIf="catched()"><button type="button" class="btn btn-outline-success">Catched!</button></div>
+<div *ngIf="!catched()"><button type="button" class="btn btn-outline-danger">Not catched</button></div>
