--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -12,9 +12,14 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="nav navbar-nav">
           <!-- Pestanas del ROVER -->
-          
-          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/brazo" class="nav-link">ARM<span class="sr-only">(current)</span>  </a>
+          <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
+            <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownArm" role="button">
+              ARM
+            </a>
+            <div ngbDropdownMenu aria-labelledby="navbarDropdownArm" class="dropdown-menu">
+              <a ngbDropdownItem href="#" routerLink="/brazo/piloto">Pilot</a>
+              <a ngbDropdownItem href="#" routerLink="/brazo/copiloto">Copilot</a>
+            </div>
           </li>
           <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
             <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button">
@@ -59,8 +64,8 @@
         <div class="collapse navbar-collapse flex-grow-1 text-right">
           <ul class="navbar-nav ml-auto">
             <span class="navbar-text">
-              <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVERA</span>
-              <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINE</span>
+              <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVER</span>
+              <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINES</span>
               <span class="badge badge-warning" *ngxPermissionsOnly="['LUNABOT']">LUNABOT</span>
             </span>
           </ul>
