--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
@@ -9,17 +9,17 @@
                      <tbody>
                         <tr class="justify-content-center text-center align-middle">
                            <td class="td"></td>
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[2])" (mouseup)="changeImage(imageButtons[0])">FRONT</button></td>
+                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="change_value(imageButtons[2], 'front')" (mouseup)="stop_changing_value()">FRONT</button></td>
                            <td class="td"></td>
                         </tr>
                         <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[3])" (mouseup)="changeImage(imageButtons[0])">LEFT</button></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="change_value(imageButtons[3], 'left')" (mouseup)="stop_changing_value()">LEFT</button></td>
                            <td class="td"></td>
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[4])" (mouseup)="changeImage(imageButtons[0])">RIGHT</button></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="change_value(imageButtons[4], 'right')" (mouseup)="stop_changing_value()">RIGHT</button></td>
                         </tr>
                         <tr class="justify-content-center text-center align-middle">
                            <td class="td"></td>
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[1])" (mouseup)="changeImage(imageButtons[0])">BACK</button></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="change_value(imageButtons[1],'back')" (mouseup)="stop_changing_value()">BACK</button></td>
                            <td class="td"></td>
                         </tr>
                      </tbody>
