--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-rotacion/brazo-cinematica-inversa-rotacion.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-rotacion/brazo-cinematica-inversa-rotacion.component.html
@@ -8,10 +8,10 @@
                   <table class="table table-borderless" style="height: 100%; background-color: transparent;">
                      <tbody>
                         <tr class="justify-content-center text-center align-middle">
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageRoll(1)" (mouseup)="changeImageRoll(0)"></button></td>
+                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageRoll(1, 'CW')" (mouseup)="stop_changing_value()"></button></td>
                         </tr>
                         <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageRoll(2)" (mouseup)="changeImageRoll(0)"></button></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageRoll(2, 'CCW')" (mouseup)="stop_changing_value()"></button></td>
                         </tr>
                      </tbody>
                   </table>
@@ -25,10 +25,10 @@
                   <table class="table table-borderless" style="height: 100%; background-color: transparent;">
                      <tbody>
                         <tr class="justify-content-center text-center align-middle">
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageYaw(1)" (mouseup)="changeImageYaw(0)"></button></td>
+                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageYaw(1,'CW')" (mouseup)="stop_changing_value()"></button></td>
                         </tr>
                         <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageYaw(2)" (mouseup)="changeImageYaw(0)"></button></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageYaw(2, 'CCW')" (mouseup)="stop_changing_value()"></button></td>
                         </tr>
                      </tbody>
                   </table>
@@ -42,10 +42,10 @@
                   <table class="table table-borderless" style="height: 100%; background-color: transparent;">
                      <tbody>
                         <tr class="justify-content-center text-center align-middle">
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImagePitch(1)" (mouseup)="changeImagePitch(0)"></button></td>
+                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImagePitch(1,'CW')" (mouseup)="stop_changing_value()"></button></td>
                         </tr>
                         <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImagePitch(2)" (mouseup)="changeImagePitch(0)"></button></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImagePitch(2,'CCW')" (mouseup)="stop_changing_value()"></button></td>
                         </tr>
                      </tbody>
                   </table>
